# c_metrics

./: Makefile  README.md  confusion_matrix.c  dziko.py  metrics.c  pyproject.toml  setup.py
.github/workflows/: python-package.yml
cm-metrics/: cmmc.py
confusion_metrics/: __init__.py  confusion_metrics.py
scripts/: time_compare.py
skcm/: __init__.py  confusion_matrix_metrics.py  confusion_metrics.py
skcm/test/: test_confusion_matrix.py
src/: confusion_matrix.c
src/confusion_matrix/: confusion_matrix.c
tests/: test_confusion_metrics.py
